--- a/versions.properties
+++ b/versions.properties
@@ -9,22 +9,23 @@
 ####
 #### NOTE: Some versions are filtered by the rejectVersionsIf predicate. See the settings.gradle.kts file.
 
-plugin.com.google.devtools.ksp=1.6.21-1.0.5
+plugin.com.google.devtools.ksp=1.7.0-1.0.6
 
-version.com.google.cloud..libraries-bom=25.2.0
+version.com.google.cloud..libraries-bom=25.4.0
 
 version.junit.jupiter=5.8.2
 
-version.kotlin=1.6.21
+version.kotlin=1.7.0
+## # available=1.7.10
 
-version.kotlinpoet=1.11.0
+version.kotlinpoet=1.12.0
 
-version.kotlinx.coroutines=1.6.1
+version.kotlinx.coroutines=1.6.3
 
-version.kotlinx.serialization=1.3.2
+version.kotlinx.serialization=1.3.3
 
-  version.ksp=1.6.21-1.0.5
+  version.ksp=1.7.0-1.0.6
 
 version.slf4j=1.7.36
 
-version.testcontainers=1.17.1
+version.testcontainers=1.17.3
